# simple_local_planner

./: README.md
simple_local_planner/: CMakeLists.txt  package.xml  slp_plugin.xml
simple_local_planner/include/simple_local_planner/: simple_local_planner.h
simple_local_planner/src/: simple_local_planner.cpp
